Contrast Issues Fixed

--- a/project/styles/large-style.css
+++ b/project/styles/large-style.css
@@ -1,6 +1,6 @@
 :root {
     --primary-color: #191970;
-    --secondary-color: #648de5;
+    --secondary-color: #113582;
     --highlighted: #ff9710;
     --border: #d3d0cb;
     --black-tone: #1e2019;
